# TorchSpec

./: .gitignore  README.md  pyproject.toml
.github/workflows/: docker-release.yml
configs/: dflash_qwen3_8b_repro.yaml  hf_qwen3_8b_1gpu.yaml  hf_qwen3_8b_dflash_1gpu.yaml  sglang_minimax_m25_5node.yaml  sglang_qwen3_8b_dflash.yaml  sglang_qwen3_8b_mla_draft.yaml  vllm_qwen3_5_35b.yaml  vllm_qwen3_8b.yaml
configs/draft_models/: kimi_k25_eagle3.json  kimi_k25_eagle3_mla.json  minimax_m25_eagle3.json  qwen3_8b_eagle3_mla.json
docker/: justfile
docker/sglang/v0.5.10.post1/: Dockerfile
docker/sglang/v0.5.8.post1/: Dockerfile  Dockerfile.runpod
docker/vllm/v0.19.1/: Dockerfile
docs/: code_architecture.md  specforge_dflash_training_reference.md
docs/dflash/: README.md
docs/inference/dflash/: README.md  TRAINING_GUIDE.md  dflash_implementation_log.md  dflash_issues.md  dflash_overview.md  issues.md  (+6 more)
examples/: README.md
examples/data/: sample_conversations.jsonl
examples/minimax-m25-5node-h200/: run.sh
examples/qwen3-8b-single-node/: run.sh
patches/custom/: flash_attention.patch
scripts/: fix_hf_model_config.py  modal_dflash_benchmark.py  modal_dflash_benchmark_sglang.py  modal_dflash_train.py  modal_dflash_train_hf.py  modal_example.py  runpod_dflash_train.sh
scripts/modal/: modal_dflash_benchmark_sglang.py  modal_dflash_train.py  setup_modal_secrets.sh
scripts/runpod/: runpod_dflash_test.sh  runpod_dflash_train.sh  runpod_phase_c.sh  runpod_setup.sh  runpod_ssh.sh
scripts/tools/: extract_dflash_checkpoint.py  prepare_perfectblend.py
tests/: test_connector_slot_mapping.py  test_continual_training_checkpoint.py  test_deepseek_eagle.py  test_dflash.py  test_draft_model_config.py  test_eagle3_loss.py  test_fa4.py  test_flex_attention.py  test_kimi_k25_parser.py  test_loss_mask_cross_validation.py  test_minimax_parser.py  test_sglang_engine_integration.py  test_vllm_engine.py  test_vllm_engine_integration.py
tools/: apply_sglang_patch.sh  build_conda.sh  convert_to_hf.py  generate_data.py  update_sglang_patch.sh
torchspec/: __init__.py  train_entry.py
torchspec/config/: dflash_draft_config.json  inference_config.py  mooncake_config.py  train_config.py  utils.py
torchspec/controller/: eval.py  inference_manager.py  loop.py  training_controller.py
torchspec/data/: dataset.py  parse.py  preprocessing.py  template.py  utils.py
torchspec/inference/: __init__.py  factory.py
torchspec/models/: __init__.py  dflash.py  eagle3.py
torchspec/ray/: placement_group.py  train_group.py
torchspec/training/: checkpoint.py  data_fetcher.py  dflash_trainer.py  eagle3_trainer.py  fsdp.py  optimizer.py  trainer.py  trainer_actor.py
torchspec/utils/: env.py  logging.py  misc.py
(+18 files in other folders)
